# g3d

./: .README.md.un~  .gitignore  CMakeLists.txt  README.md
resources/: Volleyball.mtl  bench.mtl  fragment-shader.txt  hall-fragment-shader.txt  hall-vertex-shader.txt  scene.f.shader  scene.v.shader  spotlight.mtl  vertex-shader.txt
source/: Shader.cpp  main.cpp
source/gk3d/: Bitmap.cpp  Bitmap.h  Camera.cpp  Camera.h  Cube.h  Model.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
source/tdogl/: Camera.cpp  Camera.h  Model.h
